# cmaketemplate

./: CMakeLists.txt  README.md
cmake/: find_poco.cmake
cmake/Modules/: FindPoco.cmake
src/main/: CMakeLists.txt  main.cpp
